--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "prop-types": "^15.6.2",
+    "react-transition-group": "^2.4.0"
   }
 }
